--- a/views/loginDashboard/pldReports.ejs
+++ b/views/loginDashboard/pldReports.ejs
@@ -195,10 +195,12 @@
                                 htmlResponsesTable += '<td>'+eachRecord.name+' </td>';
                                 htmlResponsesTable += '<td>'+dateTime+' </td>';
                                 htmlResponsesTable += '<td><button class="btn btn-primary submitFormForApproval" id="'+eachRecord.sfid+'" >Submit For Approval</a> </td>';
-                                if(eachRecord.status__c == 'Approved' || eachRecord.status__c == 'Rejected' || eachRecord.status__c != 'Pending' )
+                                if(eachRecord.status__c == 'Approved' || eachRecord.status__c == 'Rejected' || eachRecord.status__c == 'Pending' )
                                   htmlResponsesTable += '<td>'+eachRecord.status__c+'</td>';
-                                else
-                                htmlResponsesTable += '<td></td>';
+                                else if(eachRecord.status__c == null)
+                                  htmlResponsesTable += '<td></td>';
+                                else 
+                                  htmlResponsesTable += '<td></td>';
                                 if(eachRecord.status__c != null && eachRecord.status__c != 'Pending' )
                                 {
                                   htmlResponsesTable += '<td><a class="btn btn-primary " href="https://llfdev1-llf1.cs74.force.com/responsepdf?Id='+eachRecord.sfid+'" target="_blank" style="color:white;"  >Preview</a> </td>';
